# SmartEVSim

./: .gitignore  LICENSE  README.md  centralized_config.yaml  default_config.yaml  pyproject.toml  run.py
config/: centralized_config.yaml  distributed_config.yaml
results/: centralized_config.csv
src/smartevsim/: __init__.py  engine.py  engine_api.py  scenario_generator.py
src/smartevsim/analysis/: illustrate_practical_tests.py  illustrations.py  metrics.py
src/smartevsim/config/charger_configs/: acdc.yaml  keba_P30.yaml  wattpilot_22.yaml  zaptec_pro.yaml
src/smartevsim/config/ev_configs/: skoda_enyaq_iV60_2021.yaml  tesla_model3_LRDM_2020.yaml  vw_id3_pro_2022.yaml
src/smartevsim/units/: central_controller.py  charger.py  ev.py  micro_controller.py  pcc.py  server.py
src/smartevsim/utils/: conversions.py  data_classes.py  delay.py  logging.py  priority.py
